fix: Button state animation fix

--- a/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
@@ -29,7 +29,7 @@
                 <button
                     class="btn"
                     *ngIf="user?.role == 'ORGANIZER'"
-                    (click)="acceptButtonClicked(request.id!);$event.stopPropagation()"
+                    (click)="acceptButtonClicked(request);$event.stopPropagation()"
                     [@buttonState]="acceptButtonState"
                 >
                     <fa-icon [icon]="faCheck" />
