--- a/museum-frontend/src/app/feature-modules/items/artifact-form/artifact-form.component.css
+++ b/museum-frontend/src/app/feature-modules/items/artifact-form/artifact-form.component.css
@@ -1,6 +1,6 @@
 .dialogue {
     width: 32rem;
-    height: 50rem;
+    height: 40rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -127,7 +127,39 @@
     pointer-events: none;
     color: #fff;
   }
-  
+
+  .input-box select {
+    width: 100%;
+    height: 100%;
+    border-radius: 40px;
+    font-size: 16px;
+    padding: 2% 3%;
+    border: 2px solid #fff;
+    color: #fff; /* Text color */
+}
+
+.input-box select:focus option {
+  background-color: #f2f2f2; 
+  color: #1b1b1b;
+  border-radius: 10px;
+  padding: 8px; 
+}
+
+/* Styling the arrow */
+.input-box select::after {
+    content: '\25BC';
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    pointer-events: none;
+    color: #1b1b1b;
+}
+
+
+
+
+
   .date-picker-input {
     width: 80%;
     height: 90%;
