--- a/museum-frontend/src/app/feature-modules/items/artifact-form/artifact-form.component.html
+++ b/museum-frontend/src/app/feature-modules/items/artifact-form/artifact-form.component.html
@@ -35,7 +35,7 @@
 
         <div class="input-box">
             <input 
-                    type="number" 
+                    type="text" 
                     formControlName="yearOfCreation"
                     required
             />
