--- a/museum-frontend/src/app/feature-modules/items/artifacts/artifacts.component.html
+++ b/museum-frontend/src/app/feature-modules/items/artifacts/artifacts.component.html
@@ -7,5 +7,14 @@
               [@buttonState]="addItemButtonState"
               >+ Add item
     </button>
+    <div class="card-container">
+        <div class="row" *ngFor="let row of slicedItems">
+            <app-artifact-card class="card"
+            *ngFor="let item of row"
+            [item]="item">
+            </app-artifact-card>
+        </div>
+    </div>
+      
 </div>
   
