--- a/museum-frontend/src/app/feature-modules/tours/components/tour-view/tour-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-view/tour-view.component.html
@@ -32,6 +32,7 @@
             [@fadeIn]
             *ngFor="let tour of tours"
             [tour]="tour"
+            (dialogRefClosed)="handleDialogClosed($event)"
         ></xp-tour-card-view>
     </div>
   </div>
