feat: adding modals

--- a/museum-frontend/src/app/feature-modules/cleaning/cleaning-handling-view/cleaning-handling-view.component.html
+++ b/museum-frontend/src/app/feature-modules/cleaning/cleaning-handling-view/cleaning-handling-view.component.html
@@ -10,6 +10,7 @@
               [@fadeIn]
               *ngFor="let cleaning of cleanings"
               [cleaning]="cleaning"
+              (dialogRefClosed)="handleDialogClosed($event)"
           ></app-cleaning-proposal-card>
       </div>
     </div>
