--- a/museum-frontend/src/app/feature-modules/tours/components/tour-view/tour-view.component.css
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-view/tour-view.component.css
@@ -589,8 +589,10 @@ input[type="range"] {
 }
 
 .overview {
+  position: relative;
   height: auto;
   min-height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapers.com%2Fimages%2Fhd%2Fkolkata-marble-museum-7wmw0gmg8aibqee2.jpg&f=1&nofb=1&ipt=bb81295396b2ae21a01d8fffe17b956028be4ec82dd4c2e4f8898b07ebb69f96&ipo=images') no-repeat;
