--- a/museum-frontend/src/app/feature-modules/tours/components/tour-card-view/tour-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-card-view/tour-card-view.component.html
@@ -17,7 +17,6 @@
     </div>
     <div class="tour-card-content">
         <div class="tour-card-top">
-          <!-- OVDE SU BILE ONA KANTICA I TA SRANJA-->
         </div>
         <div class="tour-card-information">
             <div class="tour-card-center">
@@ -55,6 +54,7 @@
                 </div>
 
                 <button
+                    *ngIf="this.user?.role == 'ORGANIZER'"
                     class="btn"
                     (click)="editButtonClicked();$event.stopPropagation()"
                     [@buttonState]="editButtonState"
@@ -65,11 +65,22 @@
 
                 <button
                     class="btn"
+                    *ngIf="this.user?.role == 'ORGANIZER'"
                     (click)="removeButtonClicked(tour.id!);$event.stopPropagation()"
                     [@buttonState]="removeButtonState"
                 >
                     <fa-icon [icon]="faRemove" />
                     &nbsp;Remove
+                </button>
+
+                <button
+                    class="btn"
+                    *ngIf="this.user?.role == 'GUEST'"
+                    (click)="reserveTicketsButtonClicked(tour.id!);$event.stopPropagation()"
+                    [@buttonState]="reserveTicketsButtonState"
+                >
+                    <fa-icon [icon]="faTicket" />
+                    &nbsp;Reserve tickets
                 </button>
             </div>
         </div>
