--- a/museum-frontend/src/app/feature-modules/tours/components/tour-card-view/tour-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-card-view/tour-card-view.component.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="tour-date">
                   <div class="tour-date-value">
-                    <strong>Date and time: </strong> {{ tour.occurrenceDateTime }}
+                    <strong>Date and time: </strong> {{ this.tourOccurrenceDate }} {{ this.tourOccurrenceTime }} h
                   </div>
                 </div>
                 <div class="tour-capacity">
