fix: Fix navbar user role error

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -65,7 +65,7 @@
 
       <button 
             class="feat-button"
-            *ngIf="user && user.role === 'ORGANIZER' || user?.role === 'GUEST'"
+            *ngIf="user && user?.role === 'ORGANIZER' || user?.role === 'GUEST'"
             color="white"
             mat-raised-button
             [routerLink]="['request-view']" 
