--- a/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
@@ -45,6 +45,10 @@
                     <fa-icon [icon]="faTimes" />
                     &nbsp;Decline
                 </button>
+                
+                <div class="request-status-value">
+                    <strong>Status: </strong> &nbsp; {{ request.status.toString() }}
+                </div>  
             </div>
         </div>
     </div>
