refactor: Change date and time format

--- a/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="tour-date">
                   <div class="tour-date-value">
-                    <strong>Date and time: </strong> {{ request.occurrenceDateTime }}
+                    <strong>Date and time: </strong> {{ this.tourOccurrenceDate }} {{ this.tourOccurrenceTime }} h
                   </div>
                 </div>
                 <div class="tour-capacity">
