--- a/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="tour-rooms-occupied">
                   <div class="tour-rooms-value">
-                      <strong>Rooms occupied: </strong> TO DO :/
+                      <strong>Exhibitions: </strong> TO DO :/
                   </div>
                 </div>
             </div>
