--- a/museum-frontend/src/app/feature-modules/cleaning/cleaning-proposal-form/cleaning-proposal-form.component.css
+++ b/museum-frontend/src/app/feature-modules/cleaning/cleaning-proposal-form/cleaning-proposal-form.component.css
@@ -39,7 +39,8 @@
   }
   
   .wrapper .input-box {
-    margin-top: 6%;
+    margin-top: 2%;
+    margin-bottom: 2%;
     position: relative;
     width: 100%;
     height: 10%;
@@ -293,4 +294,8 @@
   #curator-table {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .date-labels {
+    margin-left: 1.5%;
   }
