style: Add minimal available date to date picker

--- a/museum-frontend/src/app/feature-modules/cleaning/cleaning-proposal-form/cleaning-proposal-form.component.html
+++ b/museum-frontend/src/app/feature-modules/cleaning/cleaning-proposal-form/cleaning-proposal-form.component.html
@@ -8,7 +8,6 @@
         <div class="input-box">
             <input 
                     type="text" 
-
                     formControlName="tekst" 
                     required
             />
@@ -23,6 +22,7 @@
                     id="datepicker" 
                     name="datepicker"
                     formControlName="startDate"
+                    [min]="minDate"
                     required
             />
             
@@ -36,6 +36,7 @@
                     id="datepicker" 
                     name="datepicker"
                     formControlName="endDate"
+                    [min]="minDate"
                     required
             />
         </div>
