style: Change background picture and its animation

--- a/museum-frontend/src/app/feature-modules/cleaning/cleaning-handling-view/cleaning-handling-view.component.css
+++ b/museum-frontend/src/app/feature-modules/cleaning/cleaning-handling-view/cleaning-handling-view.component.css
@@ -594,7 +594,7 @@
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    background: url('https://media.istockphoto.com/id/1411558713/photo/gray-grunge-texture.webp?b=1&s=170667a&w=0&k=20&c=lAhD6oZBI4PSZ9a1eH-RCxiRhlr34t3Y7Z0xmYX3Pb8=') no-repeat;
+    background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F9b%2Fc2%2Fc9%2F9bc2c9469eb8ee6bda06c3cb9c7e3c44.jpg&f=1&nofb=1&ipt=b6a1c4e53bb7f66d7723e037e05cd91dbbc81f94a95a45c230963c27d194ae56&ipo=images') no-repeat;
     background-position: center;
     background-size: cover;
     transition: background-size 0.3s ease;
