--- a/museum-frontend/src/app/feature-modules/cleaning/cleaning-handling-view/cleaning-handling-view.component.html
+++ b/museum-frontend/src/app/feature-modules/cleaning/cleaning-handling-view/cleaning-handling-view.component.html
@@ -1,4 +1,4 @@
-<div class="overview" >
+<div class="overview" [ngStyle]="{'background-size': backgroundSize}">
     <div class="h2-wrapper">
       <h2>Cleaning proposals</h2>
     </div>
