--- a/museum-frontend/src/app/feature-modules/stakeholder/components/shared-styles.css
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/shared-styles.css
@@ -1,11 +1,17 @@
 .container {
     background-color: rgb(124, 124, 124);
     color: white;
+
+    display: flex;
+    flex-direction: column;
     
     border-radius: 1rem;
+    padding: 2rem;
+}
+
+.wrapper {
     margin: 2rem;
     margin-inline: 10rem;
-    padding: 2rem;
 }
 
 .profile-grid {
