--- a/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.html
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.html
@@ -1,9 +1,11 @@
-<div class="container profile-grid">
-    <img class="profile-picture" src="../../../../assets/default-profile-picture.png" alt="">
-    <div class="user-data">
-        <p class="name">{{curator?.firstName}} {{curator?.lastName}}</p>
-        <p class="username">&#64;{{curator?.username}}</p>
-        <p class="bio">{{curator?.biography}}</p>
+<div class="wrapper">
+    <div class="container profile-grid">
+        <img class="profile-picture" src="../../../../assets/default-profile-picture.png" alt="">
+        <div class="user-data">
+            <p class="name">{{curator?.firstName}} {{curator?.lastName}}</p>
+            <p class="username">&#64;{{curator?.username}}</p>
+            <p class="bio">{{curator?.biography}}</p>
+        </div>
+        <img class="edit" src="../../../../assets/pen.svg" [routerLink]="['edit']">
     </div>
-    <img class="edit" src="../../../../assets/pen.svg" [routerLink]="['edit']">
 </div>
