style: Change navbar icons

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -80,7 +80,7 @@
             mat-raised-button
             [routerLink]="['item-view']" 
       >         
-      <fa-icon [icon]="faAdressBook" />    
+      <fa-icon [icon]="faArchive" />    
       &nbsp;See items
       </button>
 
@@ -91,7 +91,7 @@
             mat-raised-button
             [routerLink]="['cleaning-proposals-view']" 
       >         
-      <fa-icon [icon]="faAdressBook" />    
+      <fa-icon [icon]="faEnvelopeOpen" />    
       &nbsp;See proposals
       </button>
 
@@ -102,7 +102,7 @@
             mat-raised-button
             [routerLink]="['items-for-cleaning-view']" 
       >         
-      <fa-icon [icon]="faAdressBook" />    
+      <fa-icon [icon]="faEnvelopeOpen" />    
       &nbsp;Items for cleaning
       </button>
 
