added the route

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -16,7 +16,7 @@
               class="feat-button"
               color="white" 
               mat-raised-button 
-              [routerLink]="['']"> <!-- PROMENITI PUTANJU -->
+              [routerLink]="['exhibitions-view']"> <!-- PROMENITI PUTANJU -->
         <fa-icon [icon]="faInstitution" />    
         &nbsp;Exhibitions
       </button>
