--- a/museum-frontend/src/app/feature-modules/tours/components/curator-choosing-dialogue/curator-choosing-dialogue.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/curator-choosing-dialogue/curator-choosing-dialogue.component.html
@@ -17,7 +17,7 @@
                     >Choose
             </button> 
             <button class="table-btn"
-                    (click)="onRemoveClicked()" 
+                    (click)="onRemoveClicked(curator)" 
                     type="submit"
                     *ngIf="isSelected(curator)"
                     [@buttonState]="chooseButtonState"
