style: Add exhibitions and duration to tour card

--- a/museum-frontend/src/app/feature-modules/tours/components/tour-card-view/tour-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-card-view/tour-card-view.component.html
@@ -39,6 +39,16 @@
                       <strong>Capacity: </strong> {{ tour.capacity }} people
                   </div>
                 </div>
+                <div class="tour-capacity">
+                    <div class="tour-capacity-value">
+                        <strong>Exhibitions: </strong> {{ tour.exhibitions }}
+                    </div>
+                </div>
+                <div class="tour-capacity">
+                    <div class="tour-capacity-value">
+                        <strong>Duration: </strong> {{ tour.duration }} minutes
+                    </div>
+                </div>
             </div>
             <div class="tour-card-right">
                 <div class="tour-price">
