style: Show exhibitions

--- a/museum-frontend/src/app/feature-modules/tours/components/tour-card-view/tour-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-card-view/tour-card-view.component.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="tour-capacity">
                     <div class="tour-capacity-value">
-                        <strong>Exhibitions: </strong> {{ tour.exhibitions }}
+                        <strong>Exhibitions: </strong> {{ this.exhibitionsString }}
                     </div>
                 </div>
                 <div class="tour-capacity">
