style: Add pricelist modal

--- a/museum-frontend/src/app/feature-modules/tours/components/tour-view/tour-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-view/tour-view.component.html
@@ -13,6 +13,14 @@
   <button *ngIf="user!.role == 'ORGANIZER'"
           type="submit" 
           class="add-tour-btn" 
+          (click)="viewPricelistButtonClicked()"
+          [@buttonState]="pricelistButtonState">
+    <fa-icon [icon]="faMoneyBill" />
+    &nbsp;View pricelist
+  </button>
+  <button *ngIf="user!.role == 'ORGANIZER'"
+          type="submit" 
+          class="add-tour-btn" 
           (click)="addToursButtonClicked()"
           [@buttonState]="toursButtonState">
     <fa-icon [icon]="faPlus" />
