--- a/museum-frontend/src/app/feature-modules/tours/components/tour-pricelist-view/tour-pricelist-view.component.css
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-pricelist-view/tour-pricelist-view.component.css
@@ -1,5 +1,5 @@
 .dialogue {
-  width: 32rem;
+  width: 30rem;
   height: 21rem;
   display: flex;
   align-items: center;
@@ -34,8 +34,7 @@
 }
 
 .wrapper .submit-btn {
-  margin-top: 5%;
-  width: 100%;
+ width: 100%;
   height: 45px;
   background: #fff;
   border: none;
@@ -48,6 +47,14 @@
   font-weight: 600;
 }
 
+.wrapper  .edit {
+  margin-top: 15%;
+}
+
+.wrapper  .done {
+  margin-top: 9%;
+}
+
 .wrapper .submit-btn:hover {
   background-color: rgb(172, 172, 172); 
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
@@ -56,14 +63,67 @@
 }
 
 p {
-  font-size: 16px;
+  font-size: 17px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 h2 {
+  margin-top: 1%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.wrapper .input-box {
+  margin-top: 6%;
+  position: relative;
+  width: 100%;
+  height: 12%;
+  border-radius: 40px;
+  display: flex;
+}
+
+.input-box input {
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+  font-size: 16px;
+  padding: 2% 3%;
+  border: 2px solid #fff;
+}
+
+.input-box input::placeholder {
+  color: #1b1b1b;
+}
+
+.input-box fa-icon {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+}
+
+.input-box label {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.3s ease;
+  color: rgba(0, 0, 0, 0.7);
+  pointer-events: none;
+}
+
+.input-box input:focus + label,
+.input-box label.active {
+  top: -13px;
+  left: 10px;
+  font-size: 13px;
+  color: #fff;
+}
+
+.paragraphs {
+  margin-top: 15%;
 }
