feat: Integrate exhibitions with personal tour requests

--- a/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-request-card-view/tour-request-card-view.component.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="tour-rooms-occupied">
                   <div class="tour-rooms-value">
-                      <strong>Exhibitions: </strong> TO DO :/
+                      <strong>Exhibitions: </strong> {{ exhibitionsString }}
                   </div>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                      *ngIf="this.user?.role === 'GUEST'"
                 >
                     <strong>Status: </strong> &nbsp; {{ request.status.toString() }}
-                </div>  
+                </div>
 
                 <button
                     class="btn"
