--- a/museum-frontend/src/app/feature-modules/tours/components/decline-request-prompt/decline-request-prompt.component.css
+++ b/museum-frontend/src/app/feature-modules/tours/components/decline-request-prompt/decline-request-prompt.component.css
@@ -1,6 +1,6 @@
 .prompt {
-  width: 450px;
-  height: 250px;
+  width: 500px;
+  height: 400px;
   display: flex;
   flex-direction: column;
 }
@@ -21,13 +21,13 @@
   display: flex;
   justify-content: center;
   flex-direction: row;
-  margin-top: 10%;
+  margin-top: 20%;
   gap: 10%;
   height: auto;
 }
 
 .btn {
-  width: 150px;
+  width: 200px;
   height: 40px;
   background: #fff;
   border: none;
@@ -42,8 +42,8 @@
 }
 
 .btn:hover {
-  background-color: #f2f2f2; 
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+  background-color: #f2f2f2;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   transform: scale(1.03);
   transition: transform 300ms ease;
 }
@@ -54,7 +54,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000; 
+  z-index: 1000;
 }
 
 .modal-container {
@@ -62,11 +62,59 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1001; 
-  background-color: rgba(255, 255, 255, .1); 
+  z-index: 1001;
+  background-color: rgba(255, 255, 255, .1);
   padding: 20px;
   backdrop-filter: blur(15px);
   color: #fff;
   border: 3px solid rgba(255, 255, 255, .2);
   border-radius: 10px;
+}
+
+.input-box {
+  margin-top: 6%;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+  display: flex;
+}
+
+.input-box textarea {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  font-size: 16px;
+  padding: 3% 5%;
+  border: 2px solid #fff;
+}
+
+.input-box textarea::placeholder {
+  color: #1b1b1b;
+}
+
+.input-box fa-icon {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+}
+
+.input-box label {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.3s ease;
+  color: rgba(0, 0, 0, 0.7);
+  pointer-events: none;
+}
+
+.input-box textarea:focus + label,
+.input-box label.active {
+  top: -13px;
+  left: 10px;
+  font-size: 13px;
+  color: #fff;
 }
