--- a/museum-frontend/src/app/feature-modules/tours/components/decline-request-prompt/decline-request-prompt.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/decline-request-prompt/decline-request-prompt.component.html
@@ -3,17 +3,32 @@
   <div class="prompt">
     <h1>Decline Request</h1>
     <p>Are you sure you want to decline this request?</p>
+
+    <form [formGroup]="declineRequestForm">
+      <div class="input-box">
+        <textarea
+          formControlName="explanation"
+          required
+          (focus)="focused = 'explanation'"
+          (blur)="focused = ''"
+        ></textarea>
+        <label [class.active]="declineRequestForm.get('explanation')?.value || focused === 'explanation'">
+          Provide an explanation:
+        </label>
+      </div>
+    </form>
+
     <div class="buttons">
-      <button type="submit" 
+      <button type="submit"
               class="btn"
               (click)="declineButtonClicked()"
-              [@buttonState]="declineButtonState" 
+              [@buttonState]="declineButtonState"
               >Decline
       </button>
-      <button type="submit" 
+      <button type="submit"
               class="btn"
               (click)="cancelButtonClicked()"
-              [@buttonState]="cancelButtonState" 
+              [@buttonState]="cancelButtonState"
               >Cancel
       </button>
     </div>
